--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+*.env
+
+functions/serviceAccountKey.json
+.firebaserc
+
 # compiled output
 /dist
 /tmp
